<resources>
    <string name="app_name">Learning App</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="action_login">Login</string>
    <string name="action_about">About</string>
    <string name="action_home">Home</string>
    <string name="action_calculator">Calculator</string>
    <string name="action_downloader">Downloader</string>
    <string name="login_remembername">Remember me</string>
    <string name="action_youtube">YouTube</string>
    <string name="action_newyoutube">New YouTube</string>
    <string name="help_instructions">Enter Two Numbers</string>
    <string name="title_activity_youtube">YoutubeActivity</string>
    <string name="title_activity_maps">Map</string>
    <string name="title_activity_standalone">StandaloneActivity</string>

    <string-array name="navigation_items">
        <item>@string/action_home</item>
        <item>@string/action_login</item>
        <item>@string/action_calculator</item>
        <item>@string/action_downloader</item>
        <item>@string/action_youtube</item>
        <item>@string/action_newyoutube</item>
    </string-array>

    <string name="drawer_open">Open Navigation drawer</string>
    <string name="drawer_close">Close Navigation drawer</string>
</resources>
